### This file was generated by Nexus Schema
### Do not make changes to this file directly


type CreateItemResponse {
  id: String!
}

type CreatePhaseResponse {
  id: String!
}

type DeleteItemResponse {
  message: String
}

type DeletePhaseResponse {
  message: String
}

type Item {
  id: String!
  is_complete: Boolean
  phase_id: String
  title: String
}

type Mutation {
  createItem(phaseId: String!, planId: String!): CreateItemResponse
  createPhase(planId: String!): CreatePhaseResponse
  deleteItem(id: String!): DeleteItemResponse
  deletePhase(id: String!): DeletePhaseResponse
  updateItem(id: String!, isComplete: Boolean, title: String): UpdateItemResponse
  updatePhase(id: String!, title: String): UpdatePhaseResponse
}

type Phase {
  id: String!
  is_complete: Boolean
  plan_id: String
  position: Int
  title: String
}

"""A"""
type Plan {
  id: String!
  max_phase_position: Int
  title: String
}

type Query {
  items(planId: String!): [Item!]
  phases(planId: String!): [Phase!]
  plan(id: String!): Plan
}

type UpdateItemResponse {
  id: String!
  is_complete: Boolean
  phase_id: String
  title: String
}

type UpdatePhaseResponse {
  id: String!
  title: String
}